Add secret in the form

--- a/app/views/secrets/_form.html.erb
+++ b/app/views/secrets/_form.html.erb
@@ -12,6 +12,11 @@
   <% end %>
 
   <div class="field">
+    <%= f.label :exposed_secret %>
+    <%= f.text_field :exposed_secret %>
+  </div>
+
+  <div class="field">
     <%= f.label :description %>
     <%= f.text_field :description %>
   </div>
@@ -24,11 +29,6 @@
   <div class="field">
     <%= f.label :needed %>
     <%= f.number_field :needed %>
-  </div>
-
-  <div class="field">
-    <%= f.label :splits %>
-    <%= f.text_area :splits %>
   </div>
 
   <div class="actions">
