--- a/app/views/secrets/_form.html.erb
+++ b/app/views/secrets/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(secret) do |f| %>
+<%= form_for(secret, remote: true)  do |f| %>
   <% if secret.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(secret.errors.count, "error") %> prohibited this secret from being saved:</h2>
@@ -14,11 +14,6 @@
   <div class="field">
     <%= f.label :exposed_secret %>
     <%= f.text_field :exposed_secret %>
-  </div>
-
-  <div class="field">
-    <%= f.label :description %>
-    <%= f.text_field :description %>
   </div>
 
   <div class="field">
