Add validations and errors

--- a/app/views/secrets/create.js.erb
+++ b/app/views/secrets/create.js.erb
@@ -1,1 +1,8 @@
-$('#splits').append('<%= j render(@secret)%>')
+$('.errors').html('')
+$('#splits').html('')
+
+<%if @secret.errors.any?%>
+  $('.errors').append('<%= j render(:partial => "secrets/errors")%>')
+<%else%>
+  $('#splits').append('<%= j render(@secret)%>')
+<%end%>
