just visual changes

--- a/app/views/secrets/_form.html.erb
+++ b/app/views/secrets/_form.html.erb
@@ -1,21 +1,22 @@
 
 <%= form_for(secret, remote: true)  do |f| %>
-  <div class="field">
+  <div class="form-group">
     <%= f.label :exposed_secret %>
-    <%= f.text_field :exposed_secret %>
+    <%= f.text_field :exposed_secret, class: "form-control",
+                                      autocomplete: "off"%>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :available %>
-    <%= f.number_field :available %>
+    <%= f.number_field :available, class: "form-control" %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :needed %>
-    <%= f.number_field :needed %>
+    <%= f.number_field :needed, class: "form-control" %>
   </div>
 
-  <div class="actions">
-    <%= f.submit %>
+  <div class="form-group">
+    <%= f.submit "Split", class: "btn btn-default" %>
   </div>
 <% end %>
