copy to clipboard added

--- a/app/views/secrets/_secret.html.erb
+++ b/app/views/secrets/_secret.html.erb
@@ -1,5 +1,8 @@
-<ul>
-  <% @secret.splits.each do  |part| %>
-    <li><%=part%></li>
-  <%end%>
-</ul>
+<div class="col-md-12 input-group">
+  <textarea id="splits" class="form-control" rows=4 readonly><%=@secret.splits%></textarea>
+  <span class="input-group-btn">
+    <button class="btn btn-default copy-to-clipboard" data-clipboard-target="#splits">
+        <i class="glyphicon glyphicon-copy"></i>
+    </button>
+  </span>
+</div>
