--- a/app/views/secrets/create.js.erb
+++ b/app/views/secrets/create.js.erb
@@ -1,8 +1,9 @@
-$('.errors').html('')
-$('#splits').html('')
+$('.errors').html('');
+$('#splits').html('');
 
 <%if @secret.errors.any?%>
-  $('.errors').append('<%= j render(:partial => "secrets/errors")%>')
+  $('.errors').append('<%= j render(:partial => "secrets/errors")%>');
 <%else%>
-  $('#splits').append('<%= j render(@secret)%>')
+  $('#splits').append('<%= j render(@secret)%>');
+  new Clipboard('.copy-to-clipboard');
 <%end%>
