--- a/app/assets/stylesheets/secrets.sass
+++ b/app/assets/stylesheets/secrets.sass
@@ -1,3 +1,6 @@
-// Place all the styles related to the home controller here.
+// Place all the styles related to the Secrets controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.app-content
+  margin-top: 20px
