--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,18 @@
 
   <body>
     <div class="container">
-      <%= yield %>
+      <div class="row">
+        <div class="col-md-2 app-content">
+          <ul class="nav nav-pills nav-stacked">
+            <li role="presentation" class="<%= active_class(root_path) %>">
+              <%= link_to "Split", root_path %>
+            </li>
+          </ul>
+        </div>
+        <div class="col-md-10">
+          <%= yield %>
+        </div>
+      </div>
     </div>
   </body>
 </html>
