Add merge functionality

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,9 @@
             <li role="presentation" class="<%= active_class(root_path) %>">
               <%= link_to "Split", root_path %>
             </li>
+            <li role="presentation" class="<%= active_class(new_merger_path) %>">
+              <%= link_to "Merge", new_merger_path %>
+            </li>
           </ul>
         </div>
         <div class="col-md-10">
