--- a/app/views/secrets/_errors.html.erb
+++ b/app/views/secrets/_errors.html.erb
@@ -1,5 +1,5 @@
 <% if @secret.errors.any? %>
-  <div id="error_explanation">
+  <div class="alert alert-danger">
     <h2><%= pluralize(@secret.errors.count, "error") %> prohibited this secret from being saved:</h2>
 
     <ul>
