--- a/app/assets/stylesheets/secrets.sass
+++ b/app/assets/stylesheets/secrets.sass
@@ -2,5 +2,10 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.app-container
+  background-color: #f1f1f1
+  border-radius: 10px
+  margin-top: 20px
+
 .app-content
   margin-top: 20px
