--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 
   <body>
     <div class="container">
-      <div class="row">
+      <div class="row app-container">
         <div class="col-md-2 app-content">
           <ul class="nav nav-pills nav-stacked">
             <li role="presentation" class="<%= active_class(root_path) %>">
