--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   <body>
     <div class="container">
       <div class="row app-container">
-        <div class="col-md-2 app-content">
+        <div class="col-md-2 app-menu">
           <ul class="nav nav-pills nav-stacked">
             <li role="presentation" class="<%= active_class(root_path) %>">
               <%= link_to "Split", root_path %>
@@ -21,7 +21,7 @@
             </li>
           </ul>
         </div>
-        <div class="col-md-10">
+        <div class="col-md-10 app-content">
           <%= yield %>
         </div>
       </div>
