--- a/app/views/mergers/_form.html.erb
+++ b/app/views/mergers/_form.html.erb
@@ -1,11 +1,11 @@
 
 <%= form_for(merger, remote: true)  do |f| %>
-  <div class="form-group">
-    <%= f.label :exposed_secret %>
+  <div class="form-group col-xs-12">
+    <%= f.label :splits %>
     <%= f.text_area :splits, class: "form-control"%>
   </div>
 
-  <div class="form-group">
+  <div class="form-group col-xs-12">
     <%= f.submit "Merge", class: "btn btn-default" %>
   </div>
 <% end %>
