--- a/app/views/secrets/_form.html.erb
+++ b/app/views/secrets/_form.html.erb
@@ -1,22 +1,22 @@
 
 <%= form_for(secret, remote: true)  do |f| %>
-  <div class="form-group">
+  <div class="form-group col-xs-12">
     <%= f.label :exposed_secret %>
     <%= f.text_field :exposed_secret, class: "form-control",
                                       autocomplete: "off"%>
   </div>
 
-  <div class="form-group">
+  <div class="form-group col-xs-6">
     <%= f.label :available %>
-    <%= f.number_field :available, class: "form-control" %>
+    <%= f.number_field :available, class: "form-control", min: 2 %>
   </div>
 
-  <div class="form-group">
+  <div class="form-group col-xs-6">
     <%= f.label :needed %>
-    <%= f.number_field :needed, class: "form-control" %>
+    <%= f.number_field :needed, class: "form-control", min: 2 %>
   </div>
 
-  <div class="form-group">
+  <div class="form-group col-xs-12">
     <%= f.submit "Split", class: "btn btn-default" %>
   </div>
 <% end %>
