--- a/app/views/secrets/_form.html.erb
+++ b/app/views/secrets/_form.html.erb
@@ -1,18 +1,18 @@
 
-<%= form_for(secret, remote: true)  do |f| %>
+<%= form_for(secret, remote: true, validate: true)  do |f| %>
   <div class="form-group col-xs-12">
-    <%= f.label :exposed_secret %>
+    <%= f.label :exposed_secret, class: "control-label" %>
     <%= f.text_field :exposed_secret, class: "form-control",
                                       autocomplete: "off"%>
   </div>
 
   <div class="form-group col-xs-6">
-    <%= f.label :available %>
+    <%= f.label :available, class: "control-label" %>
     <%= f.number_field :available, class: "form-control", min: 2 %>
   </div>
 
   <div class="form-group col-xs-6">
-    <%= f.label :needed %>
+    <%= f.label :needed, class: "control-label" %>
     <%= f.number_field :needed, class: "form-control", min: 2 %>
   </div>
 
