--- a/app/views/secrets/_form.html.erb
+++ b/app/views/secrets/_form.html.erb
@@ -3,17 +3,22 @@
   <div class="form-group col-xs-12">
     <%= f.label :exposed_secret, class: "control-label" %>
     <%= f.text_field :exposed_secret, class: "form-control",
-                                      autocomplete: "off"%>
+                                      autocomplete: "off",
+                                      placeholder: "any secret"%>
   </div>
 
   <div class="form-group col-xs-6">
     <%= f.label :available, class: "control-label" %>
-    <%= f.number_field :available, class: "form-control", min: 2 %>
+    <%= f.number_field :available, class: "form-control",
+                                   min: 2,
+                                   placeholder: "greater than 2" %>
   </div>
 
   <div class="form-group col-xs-6">
     <%= f.label :needed, class: "control-label" %>
-    <%= f.number_field :needed, class: "form-control", min: 2 %>
+    <%= f.number_field :needed, class: "form-control",
+                                min: 2,
+                                placeholder: "greater than 2" %>
   </div>
 
   <div class="form-group col-xs-12">
