--- a/app/views/secrets/_form.html.erb
+++ b/app/views/secrets/_form.html.erb
@@ -11,14 +11,14 @@
     <%= f.label :available, class: "control-label" %>
     <%= f.number_field :available, class: "form-control",
                                    min: 2,
-                                   placeholder: "greater than 2" %>
+                                   placeholder: "greater than or equal than 2" %>
   </div>
 
   <div class="form-group col-xs-6">
     <%= f.label :needed, class: "control-label" %>
     <%= f.number_field :needed, class: "form-control",
                                 min: 2,
-                                placeholder: "greater than 2" %>
+                                placeholder: "less or equal than available" %>
   </div>
 
   <div class="form-group col-xs-12">
